add deletion from expedition
